kubernetes/overlays/dev/judge-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge-server
  labels:
    app: judge-server
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
