kubernetes/overlays/dev/hub-auth-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-auth-ingress
spec:
  rules:
    - host: hub-auth-dev.code-place-dev.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hub-auth
                port:
                  number: 80
  tls:
    - hosts:
        # NOTE: 굳이 `hub-auth-dev` 라고 명시한 이유는 production과 dev 환경을 구분하기 위해서입니다.
        # 현재 사용할 수 있는 도메인이 code-place-dev.kr 뿐이기 때문에 production과 구분하기 위해서는 dev라는 것을 명시하는 것이 좋다고 판단했습니다. (Junwoo)
        - hub-auth-dev.code-place-dev.kr
